--- a/MOD-8/clase-47-Pedidos-asincrónicos-con-JS/package.json
+++ b/MOD-8/clase-47-Pedidos-asincrónicos-con-JS/package.json
@@ -2,7 +2,7 @@
   "name": "rakasei",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon src/app.js"
   },
